--- a/src/group-layout.html
+++ b/src/group-layout.html
@@ -8,12 +8,29 @@ html, body, body > svg, body > div {
 body > div {
  pointer-events: none;
 }
+svg circle, svg g text {
+ cursor: move;
+}
+svg line.link {
+ cursor: move;
+ stroke: silver;
+ stroke-width: 75px;
+ stroke-linecap: round;
+}
+svg line.join {
+ stroke: silver;
+ stroke-width: 75px;
+ stroke-linecap: round;
+}
 svg line.breaking {
- opacity: 0.1;
+ visibility: hidden;
 }
 </style>
 <body>
 <svg>
+<g class="links"></g>
+<g class="joins"></g>
+<g class="nodes"></g>
 </svg>
 <div>
 </div>
@@ -24,6 +41,8 @@ svg line.breaking {
 
 function ClusterLayout(svg) {
 
+var layout = this;
+
 var state = window.state = {
   nodes_by_id: {},     // By node id
   clusters_by_id: {},  // By cluster id
@@ -32,16 +51,19 @@ var state = window.state = {
   clusters: [],
   nodes: [],
   links: [],
+  joins: [],
   rebuilding: false,
   svg: d3.select(svg),
   force: d3.layout.force().charge(-300).linkDistance(75).gravity(0),
   linksel: null,
+  joinsel: null,
   nodesel: null,
   linkdrag: null,
   nodedrag: null
 };
-state.linksel = state.svg.selectAll('line');
-state.nodesel = state.svg.selectAll('g');
+state.linksel = state.svg.select('.links').selectAll('line');
+state.joinsel = state.svg.select('.joins').selectAll('line');
+state.nodesel = state.svg.select('.nodes').selectAll('g');
 
 this.addNode = function addNode(id, obj) {
   var node = {id: id, ndata: obj, cluster: null};
@@ -158,13 +180,7 @@ function rebuild() {
 function start() {
   state.linksel = state.linksel
     .data(state.force.links(), function(d) { return d.key });
-  state.linksel.enter().insert("line").attr({
-      class: 'link',
-      fill: 'none',
-      stroke: 'silver',
-      'stroke-width': 75,
-      'stroke-linecap': 'round'
-    })
+  state.linksel.enter().insert('line').attr({class: 'link'})
     .call(linkdrag);
   state.linksel.exit().remove();
 
@@ -225,6 +241,10 @@ function tick() {
   state.linksel.attr('y1', function(d) { return d.source.y; });
   state.linksel.attr('x2', function(d) { return d.target.x; });
   state.linksel.attr('y2', function(d) { return d.target.y; });
+  state.joinsel.attr('x1', function(d) { return d.source.x; });
+  state.joinsel.attr('y1', function(d) { return d.source.y; });
+  state.joinsel.attr('x2', function(d) { return d.target.x; });
+  state.joinsel.attr('y2', function(d) { return d.target.y; });
   state.nodesel.attr('transform', function(d) {
     return 'translate(' + [d.x, d.y] + ')';
   });
@@ -247,7 +267,28 @@ function initClusterCoords(cluster) {
 }
 
 var fixedAfterDrag = 0;
-var splitDistance = 100;
+var splitDistance = 125;
+var joinDistance = 75;
+
+function distance(a, b) {
+  var dx = a.x - b.x, dy = a.y - b.y;
+  return Math.sqrt(dx * dx + dy * dy);
+}
+
+function findJoinNode(d) {
+  var closest = null;
+  state.nodes.map(function(node2) {
+    if (node2 === d || node2.cluster && node2.cluster === d.cluster) {
+      return;
+    }
+    if (distance(node2, d) < joinDistance) {
+      if (!closest || distance(node2, d) < distance(closest, d)) {
+        closest = node2;
+      }
+    }
+  });
+  return closest;
+}
 
 function nodedrag() {
   if (!state.nodedrag) {
@@ -262,37 +303,64 @@ function nodedrag() {
     }).on('drag.cluster', function(d) {
       d.px += d3.event.dx;
       d.py += d3.event.dy;
-      if (d.cluster) {
-        if (d.cluster.nodes.length == 1) {
-          d.cluster.x = d.px;
-          d.cluster.y = d.py;
+      var breaking = false;
+      var closest = findJoinNode(d);
+      if (closest) {
+        breaking = true;
+        if (!closest.cluster) {
+          state.joins = [{source: d, target: closest}];
         } else {
-          var dx = d.cluster.x - d.px, dy = d.cluster.y - d.py,
-              split = dx * dx + dy * dy > splitDistance * splitDistance;
-          state.linksel.filter(function(link) {
-            return link.source === d || link.target === d;
-          }).classed('breaking', split);
+          state.joins = closest.cluster.nodes.map(function(n) {
+            return { source: d, target: n };
+          });
+        }
+      } else {
+        state.joins = [];
+        if (d.cluster) {
+          if (d.cluster.nodes.length == 1) {
+            d.cluster.x = d.px;
+            d.cluster.y = d.py;
+          } else {
+            var dx = d.cluster.x - d.px, dy = d.cluster.y - d.py;
+            breaking = dx * dx + dy * dy > splitDistance * splitDistance;
+          }
         }
       }
       state.force.resume();
+      updatejoins();
+      state.linksel.filter(function(link) {
+        return link.source === d || link.target === d;
+      }).classed('breaking', breaking);
     }).on('dragend.cluster', function(d) {
       d.fixed &= ~2;
       nodeSiblings(d).map(function(d2) {
         d2.fixed &= ~2;
       });
-      if (d.cluster && d.cluster.nodes.length > 1) {
+      var closest = findJoinNode(d);
+      if (closest) {
+        addNodeToCluster(d, closest.cluster);
+      } else if (d.cluster && d.cluster.nodes.length > 1) {
         var dx = d.cluster.x - d.px, dy = d.cluster.y - d.py,
             split = dx * dx + dy * dy > splitDistance * splitDistance;
         if (split) {
-          removeNodeFromCluster(d);
+          layout.addCluster([d.id]);
+          d.cluster.x = d.x;
+          d.cluster.y = d.y;
         }
       }
+      state.joins = [];
+      updatejoins();
       state.svg.selectAll('.breaking').classed('breaking', false);
     });
   }
   this.call(state.nodedrag);
 }
 
+function updatejoins() {
+  state.joinsel = state.joinsel.data(state.joins);
+  state.joinsel.enter().insert('line').attr({class: 'join'});
+  state.joinsel.exit().remove();
+}
 
 function linkdrag() {
   if (!state.linkdrag) {
