--- a/src/group-layout.html
+++ b/src/group-layout.html
@@ -118,13 +118,10 @@ function addNodeToCluster(node, cluster) {
     // Nothing to do.
     return;
   }
-  // Grab cluster rep before modifying cluster.
-  var clusterRep = repId(cluster);
   // Enforce invariant: node must be in at most one cluster.
   removeNodeFromCluster(node);
   cluster.nodes.push(node);
   node.cluster = cluster;
-  $(this).trigger({type: 'join', node: node.ndata, cluster: clusterRep});
   invalidate();
 }
 
@@ -332,17 +329,22 @@ function nodedrag() {
         return link.source === d || link.target === d;
       }).classed('breaking', breaking);
     }).on('dragend.cluster', function(d) {
+      var event = null;
       d.fixed &= ~2;
       nodeSiblings(d).map(function(d2) {
         d2.fixed &= ~2;
       });
       var closest = findJoinNode(d);
       if (closest) {
+        // Report an event that a node has switched to a different cluster.
+        event = { type: 'join', node: d.id, cluster: repId(closest.cluster) };
         addNodeToCluster(d, closest.cluster);
       } else if (d.cluster && d.cluster.nodes.length > 1) {
         var dx = d.cluster.x - d.px, dy = d.cluster.y - d.py,
             split = dx * dx + dy * dy > splitDistance * splitDistance;
         if (split) {
+          // Report an event that a node has gone to its own new cluster.
+          event = { type: 'join', node: d.id, cluster: null };
           layout.addCluster([d.id]);
           d.cluster.x = d.x;
           d.cluster.y = d.y;
@@ -351,6 +353,10 @@ function nodedrag() {
       state.joins = [];
       updatejoins();
       state.svg.selectAll('.breaking').classed('breaking', false);
+      // Finally: report events after all UI is done.
+      if (event) {
+        $(layout).trigger(event);
+      }
     });
   }
   this.call(state.nodedrag);
