--- a/src/grouping-test.html
+++ b/src/grouping-test.html
@@ -62,6 +62,13 @@ for (var i = 0; i < testGrouping.getNumberOfGroups.length; i++){
     assert(testAssignments[i].equals(testGroups[i]))
 }
 
+testGroupsAfterShuffle = testGrouping.shuffle();
+
+
+//test observer methods
+//
+//
+
 
 console.log("Grouping.js passed all tests")
 
