Factor css into separate file.

--- a/src/grid-layout.html
+++ b/src/grid-layout.html
@@ -1,77 +1,11 @@
 <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
 <script src="lodash.js"></script>
 <script type="text/javascript" src="jquery-1.12.2.js"></script>
- <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <script type="text/javascript" src="classroom.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
 <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-
-<style>
-body, html {
-  font: 28px Cabin;
-  width: 100%;
-  height: 100%;
-}
-table {
-    margin: auto;
-    width: 60%;
-    border-collapse: collapse;
-}
-table td.student_name {
-    width: 20%;
-}
-table td {
-    width: 38%;
-    vertical-align: top;
-    border: 1px solid gray;
-    padding: 2px 2px;
-}
-table th {
-    font-weight: normal;
-    font-size: 22px;
-}
-
-table td.remove {
-    width: 4%;
-    vertical-align: middle;
-    text-align: center;
-}
-
-table td.remove:before {
-    font-family: FontAwesome;
-    content: '\f014';
-}
-
-table td .fa.fa-grip:before {
-    font-family: FontAwesome;
-    font-size: 12px; 
-    content: "\f142 \202F \f142 \202F \f142";
-    color: gray;
-    padding-right: 10px; 
-}
-
-table td p {
-    display: inline-block;
-    border: 1px solid;
-    border-radius: 5px;
-    padding: 3px 7px;
-    margin: 1px 3px;
-}
-
-table td p span:after {
-    font-family: FontAwesome;
-    content: ' \f00d';
-}
-
-table td p span:hover {
-    color: red;
-}
-
-table td textarea {
-    width: 100%;
-    font: 18px Cabin;
-}
-</style>
+<link rel='stylesheet' href="grid-layout.css">
 <body>
     <table class="classroom">
       <thead>
