--- a/src/group-view.html
+++ b/src/group-view.html
@@ -36,35 +36,39 @@ function assert(b) {
 if (!b) throw new Error('failed assertion');
 }
 
-//create a randomly generated classroom
-var maxTestStudents = 10
-var testStudentList = [];
-var allStudentNames = ['Berk', 'Nancy', 'David M.', 'David H.', 'Masha', 'Rita', 'Shruti', 'Nick']
-for (var n = 1; n < maxTestStudents; n++){
-testStudentList.push(new Student(_.sample(allStudentNames), n));
-}
-var testClassroom = new Classroom();
-testClassroom.setStudentList(testStudentList);
-var testStudentIDs = testStudentList.map(function(s){return s.id();})
 
+var temp_classroom = JSON.parse(localStorage.getItem('stored_classroom'));
+
+var buildclassroom = function(c) {
+	console.log(c);
+	var classroom = new Classroom();
+	for (var s = 0; s < c.length; s++) {
+		console.log(c[s]);
+		classroom.setStudent(s, c[s]);
+	}
+	return classroom;
+}
+var classroom = buildclassroom(temp_classroom.studentList);
 //create random pairs of students
 var testStudentsPerGroup = 2;
-var grouping = new Grouping(testClassroom, testStudentsPerGroup);
+console.log(classroom.getStudentList());
+var grouping = new Grouping(classroom, testStudentsPerGroup);
 
 
 </script>
 
 <script>
-
+var studentList = classroom.getStudentList();
 
 var assignments = grouping.getGroups()
 
 var layout = new ClusterLayout('svg');
 
 //add students
-for (var i = 0; i < testStudentList.length; i++){
-var student = testStudentList[i]
-layout.addNode(student.id(), student.name());
+for (var i = 0; i < studentList.length; i++){
+var student = studentList[i]
+console.log(studentList[i]);
+layout.addNode(student.sid, student.name);
 }
 
 //add groups
@@ -89,8 +93,8 @@ $('#shuffle_button').on('click', function(e){
     layout.clear()
 
     //add students
-for (var i = 0; i < testStudentList.length; i++){
-var student = testStudentList[i]
+for (var i = 0; i < studentList.length; i++){
+var student = studentList[i]
 layout.addNode(student.id(), student.name());
 }
 
