--- a/src/group-view.html
+++ b/src/group-view.html
@@ -36,39 +36,36 @@ function assert(b) {
 if (!b) throw new Error('failed assertion');
 }
 
-
-var temp_classroom = JSON.parse(localStorage.getItem('stored_classroom'));
-
-var buildclassroom = function(c) {
-	console.log(c);
-	var classroom = new Classroom();
-	for (var s = 0; s < c.length; s++) {
-		console.log(c[s]);
-		classroom.setStudent(s, c[s]);
-	}
-	return classroom;
+//create a randomly generated classroom
+var maxTestStudents = 10
+var testStudentList = [];
+var allStudentNames = ['Berk', 'Nancy', 'David M.', 'David H.', 'Masha', 'Rita', 'Shruti', 'Nick']
+for (var n = 1; n < maxTestStudents; n++){
+testStudentList.push(new Student(_.sample(allStudentNames), n));
 }
-var classroom = buildclassroom(temp_classroom.studentList);
+
+var testClassroom = new Classroom();
+testClassroom.setStudentList(testStudentList);
+var testStudentIDs = testStudentList.map(function(s){return s.id();})
+
 //create random pairs of students
 var testStudentsPerGroup = 2;
-console.log(classroom.getStudentList());
-var grouping = new Grouping(classroom, testStudentsPerGroup);
+var grouping = new Grouping(testClassroom, testStudentsPerGroup);
 
 
 </script>
 
 <script>
-var studentList = classroom.getStudentList();
+
 
 var assignments = grouping.getGroups()
 
 var layout = new ClusterLayout('svg');
 
 //add students
-for (var i = 0; i < studentList.length; i++){
-var student = studentList[i]
-console.log(studentList[i]);
-layout.addNode(student.sid, student.name);
+for (var i = 0; i < testStudentList.length; i++){
+var student = testStudentList[i]
+layout.addNode(student.id(), student.name());
 }
 
 //add groups
@@ -86,15 +83,17 @@ console.log(grouping.toString());
 });
 
 
+
+
 $('#shuffle_button').on('click', function(e){
     console.log('clicked!')
 
     var assignments = grouping.shuffle();
-    layout.clear()
+    layout.clear
 
     //add students
-for (var i = 0; i < studentList.length; i++){
-var student = studentList[i]
+for (var i = 0; i < testStudentList.length; i++){
+var student = testStudentList[i]
 layout.addNode(student.id(), student.name());
 }
 
