--- a/src/group-view.html
+++ b/src/group-view.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html>
     <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <meta charset='utf-8'>
     <link href='https://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='cluster-layout.css'>
     <body>
     
 
-
+<div class="sidebar">
+<div style="position: relative; text-align: center; margin: 20px 0 " >
+<img src="our_logo.png" width=150 >
+<div style="position: absolute; bottom: 15px; left:0 ; right: 0; text-align: center; color: white; font-size: 20px ">Group'em</div>
+</div>
+<div id='cssmenu'>
+<ul>
+   <li class='active' ><a href='#'><span>Creation</span></a></li>
+   <li class='last'><a href='#'><span>Groups</span></a></li>
+</ul>
+</div>
+</div>
 
 <svg>
 <g class="links"></g>
@@ -17,7 +32,7 @@
 
 
 <div id = "control_div">
-<button id="shuffle_button" type="button">shuffle</button>
+<button id="shuffle_button" type="button">Shuffle</button>
 </div>
 
 <script src="lodash.js"></script>
