--- a/src/grid-layout.html
+++ b/src/grid-layout.html
@@ -2,6 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="main-layout.css">
 
 <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
 <script src="lodash.js"></script>
@@ -20,7 +21,7 @@
 <div class="sidebar">
 <div style="position: relative; text-align: center; margin: 20px 0 " >
 <img src="our_logo.png" width=150 >
-<div style="position: absolute; bottom: 15px; left:0 ; right: 0; text-align: center; color: white; font-size: 20px ">Group'em</div>
+<div style="position: absolute; bottom: 15px; left:0 ; right: 0; text-align: center; color: white; font-size: 20px ">group'em</div>
 </div>
 <div id='cssmenu'>
 <ul>
@@ -36,9 +37,9 @@
     <table class="classroom">
       <thead>
         <tr>
-            <th>Student</th>
-            <th>Pair With</th>
-            <th>Don't Pair With</th>
+            <th>student</th>
+            <th>prefer</th>
+            <th>avoid</th>
             <th></th>
         </tr>
       </thead>
@@ -48,9 +49,11 @@
     </table>
 
 
-    <div id="groupem_div"><button id="groupem_button" type="button">Group'em</button></div>
-
-    </div>
+<div id="control_div">
+<button id="groupem_button" class="control_button" type="button">
+group'em
+</button>
+</div>
 
 </body>
 <script>
