--- a/src/group-view.html
+++ b/src/group-view.html
@@ -3,6 +3,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="main-layout.css">
     <link rel="stylesheet" href="styles.css">
     <link href='https://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
@@ -19,7 +20,7 @@
 <div class="sidebar">
 <div style="position: relative; text-align: center; margin: 20px 0 " >
 <img src="our_logo.png" width=150 >
-<div style="position: absolute; bottom: 15px; left:0 ; right: 0; text-align: center; color: white; font-size: 20px ">Group'em</div>
+<div style="position: absolute; bottom: 15px; left:0 ; right: 0; text-align: center; color: white; font-size: 20px ">group'em</div>
 </div>
 <div id='cssmenu'>
 <ul>
@@ -31,8 +32,10 @@
 
 
 
-<div id = "control_div">
-<button id="shuffle_button" type="button">Shuffle</button>
+<div id="control_div">
+<button id="shuffle_button" class ="action_button" type="button">
+shuffle
+</button>
 </div>
 
 <script src="lodash.js"></script>
