d3.js should be lowercase.

--- a/src/group-view.html
+++ b/src/group-view.html
@@ -39,8 +39,7 @@ shuffle
 </div>
 
 <script src="lodash.js"></script>
-<script src="D3.js"></script>
-<script src="D3.js"></script>
+<script src="d3.js"></script>
 <script src="jquery-1.12.2.js"></script>
 <script src="classroom.js"></script>
 <script src="student.js"></script>
