Commit Nick's unmerged changes.

--- a/src/group-view.html
+++ b/src/group-view.html
@@ -10,12 +10,14 @@
     <link rel='stylesheet' href='cluster-layout.css'>
     <body>
 
+
+
+
 <svg>
 <g class="links"></g>
 <g class="joins"></g>
 <g class="nodes"></g>
 </svg>
-
 
 <div class="sidebar">
 <div style="position: relative; text-align: center; margin: 20px 0 " >
@@ -30,12 +32,8 @@
 </div>
 </div>
 
-
-
-<div id="control_div">
-<button id="shuffle_button" class ="action_button" type="button">
-shuffle
-</button>
+<div id = "control_div">
+<button id="shuffle_button" type="button">shuffle</button>
 </div>
 
 <script src="lodash.js"></script>
@@ -48,49 +46,41 @@ shuffle
 <script src="cluster-layout.js"></script>
 
 <script>
-
 function assert(b) {
 if (!b) throw new Error('failed assertion');
 }
-
-//create a randomly generated classroom
-var maxTestStudents = 10
-var testStudentList = [];
-var allStudentNames = ['Berk', 'Nancy', 'David M.', 'David H.', 'Masha', 'Rita', 'Shruti', 'Nick']
-for (var n = 1; n < maxTestStudents; n++){
-testStudentList.push(new Student(_.sample(allStudentNames), n));
+var temp_classroom = JSON.parse(localStorage.getItem('stored_classroom'));
+var buildclassroom = function(c) {
+    console.log(c);
+    var classroom = new Classroom();
+    for (var s = 0; s < c.length; s++) {
+        console.log(c[s]);
+        classroom.setStudent(s, c[s]);
+    }
+    return classroom;
 }
-
-var testClassroom = new Classroom();
-testClassroom.setStudentList(testStudentList);
-var testStudentIDs = testStudentList.map(function(s){return s.id();})
-
+var classroom = buildclassroom(temp_classroom.studentList);
 //create random pairs of students
 var testStudentsPerGroup = 2;
-var grouping = new Grouping(testClassroom, testStudentsPerGroup);
-
-
+console.log(classroom.getStudentList());
+var grouping = new Grouping(classroom, testStudentsPerGroup);
 </script>
 
 <script>
-
-
+var studentList = classroom.getStudentList();
 var assignments = grouping.getGroups()
-
 var layout = new ClusterLayout('svg');
-
 //add students
-for (var i = 0; i < testStudentList.length; i++){
-var student = testStudentList[i]
-layout.addNode(student.id(), student.name());
+for (var i = 0; i < studentList.length; i++){
+var student = studentList[i]
+console.log(studentList[i]);
+layout.addNode(student.sid, student.name);
 }
-
 //add groups
 for (var i = 0; i < assignments.length; i++){
 console.log(assignments[i].getStudentIDs())
 layout.addCluster(assignments[i].getStudentIDs())
 }
-
 //add join listener
 $(layout).on('join', function(e){
 console.log('join', e.node, 'to', e.cluster);
@@ -98,34 +88,22 @@ console.log(grouping.toString());
 grouping.assignStudentToGroup(e.node, e.cluster)
 console.log(grouping.toString());
 });
-
-
-
-
 $('#shuffle_button').on('click', function(e){
     console.log('clicked!')
-
     var assignments = grouping.shuffle();
     layout.clear()
-
     //add students
-for (var i = 0; i < testStudentList.length; i++){
-var student = testStudentList[i]
-layout.addNode(student.id(), student.name());
+for (var i = 0; i < studentList.length; i++){
+var student = studentList[i]
+layout.addNode(student.sid, student.name);
 }
-
 //add groups
 for (var i = 0; i < assignments.length; i++){
 console.log(assignments[i].getStudentIDs())
 layout.addCluster(assignments[i].getStudentIDs())
 }
-
 console.log('clicked!')
-});
-
-
-
-
+})
 </script>
 
 </body>
